<resources>
    <string name="app_name">Wanderlust</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="background_image">Background image</string>
    <string name="text_onboarding_1_sub">Explore the beauty of Indonesia customized just for you and only you.</string>
    <string name="cat">cat</string>
    <string name="image">image</string>
    <string name="explore_more_with_wanderlust">Explore More With Wanderlust</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="already_have_an_account_login">Sudah memiliki akun? Masuk</string>


    <string name="error_name_required">Nama wajib diisi</string>
    <string name="error_email_required">Email wajib diisi</string>
    <string name="error_invalid_email">Alamat email tidak valid</string>
    <string name="error_password_required">Kata sandi wajib diisi</string>
    <string name="error_password_too_short">Kata sandi harus terdiri dari 8-50 karakter</string>
    <string name="error_passwords_do_not_match">Kata sandi tidak cocok</string>
    <string name="error_all_fields_required">Silakan lengkapi data diri Anda</string>
    <string name="error_confirm_password_required">Konfirmasi password Anda</string>
    <string name="don_t_have_an_account_yet_register">Belum memiliki akun? Daftar</string>
    <string name="login">Masuk</string>
    <string name="kategori">Kategori</string>
    <string name="destinasi_yang_mungkin_kamu_sukai">Destinasi yang mungkin kamu sukai</string>
    <string name="destinasi_terdekat">Destinasi terdekat</string>
    <string name="searchbar_hint">Apa yang ingin kamu cari</string>
    <string name="jelajahi_indonesia_dengan_wanderlust">Jelajahi Indonesia dengan Wanderlust.</string>
    <string name="buat_rencana">Buat Rencana</string>
    <string name="tulisan_banner">Rencanakan perjalanan\nAnda sekarang</string>
    <string name="halo_nama">Halo, %1$s!</string>
    <string name="taman">Taman</string>
    <string name="perairan">Perairan</string>
    <string name="hutan">Hutan</string>
    <string name="pantai">Pantai</string>
    <string name="gunung">Gunung</string>
    <string name="deskripsi">Candi Borobudur dibangun pada abad ke-8 dan ke-9 oleh dinasti Syailendra, candi ini merupakan salah satu situs warisan budaya dunia UNESCO</string>
    <string name="deskripsi_destinasi">Candi Borobudur dibangun pada abad ke-8 dan ke-9 oleh dinasti Syailendra, candi ini merupakan salah satu situs warisan budaya dunia UNESCO…</string>
    <string name="share_text">Kunjungi destinasi wisata terbaik: %1$s\n\nDescription: %2$s</string>
    <string name="share_title">Bagikan dengan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="itinerary">Rencana</string>
    <string name="profile">Profil</string>
    <string name="favorit">Favorit</string>
    <string name="destination">Destinasi</string>
    <string name="no_result">Maaf, hasil pencarian tidak ditemukan.</string>
    <string name="topDestination">Destinasi Populer</string>
    <string name="budaya">Budaya</string>
    <string name="taman_hiburan">Taman\nHiburan</string>
    <string name="cagar_alam">Cagar\nAlam</string>
    <string name="bahari">Bahari</string>
    <string name="pusat_perbelanjaan">Pusat\nPerbelanjaan</string>
    <string name="tempat_ibadah">Tempat\nIbadah</string>
    <string name="rating">%1$s/10.0</string>
    <string name="Kategori">Taman Hiburan</string>
    <string name="place_name">Taman Mini Indonesia Indah (TMII)</string>
    <string name="location">Cipayung, Jakarta Timur, Jakarta, Indonesia</string>
    <string name="contoh_deskripsi">Taman Mini Indonesia Indah, sering disingkat sebagai TMII, adalah taman budaya dan rekreasi yang memukau dan terletak di Jakarta, ibu kota Indonesia. Didirikan pada tahun 1975, kompleks ini meluas lebih dari 250 hektar dan memberikan kesempatan unik bagi pengunjung untuk menjelajahi beragam budaya, tradisi, dan keindahan alam Indonesia.</string>
    <string name="lokasi_terdekat">Lokasi Terdekat</string>
    <string name="list_lokasi_terdekat">• Pameran Budaya Indonesia\n• Seni Tradisional dan Pertunjukan\n• Teater IMAX Keong Emas\n• Museum Indonesia\n• Kegiatan Rekreasi\n• Kelezatan Kuliner\n• Upaya Konservasi\n• Simbol Persatuan</string>
    <string name="deskripsi_judul">Deskripsi</string>
    <string name="open_hour">Buka | %1$s</string>
    <string name="setting">Pengaturan\n</string>
    <string name="logout">Keluar</string>
    <string name="bahasa_indonesia">Indonesia</string>
    <string name="bahasa">Bahasa</string>
    <string name="keluar">Keluar</string>
    <string name="batal">Batal</string>
    <string name="apakah_anda_yakin_ingin_keluar_dari_akun_anda">Apakah Anda yakin ingin keluar dari akun Anda?</string>
    <string name="anda_belum_memiliki_daftar_destinasi_favorit">Anda belum memiliki daftar destinasi favorit.</string>
    <string name="title_itinerary">Liburan ke Jakarta</string>
    <string name="date_itinerary">%1$s - %2$s</string>
    <string name="no_itinerary">Anda belum merencanakan perjalanan.</string>
    <string name="rencanakan_perjalanan">Rencanakan Perjalanan</string>
    <string name="callout_itinerary">Buat dan susun rencana perjalanan\nAnda yang akan datang</string>
    <string name="tanggal_pergi">Tanggal Pergi</string>
    <string name="tanggal_pulang">Tanggal Pulang</string>
    <string name="lanjut">Lanjut</string>
    <string name="nama_trip">Nama Trip</string>
    <string name="tujuan">Tujuan</string>
    <string name="pilih">Pilih</string>
    <string name="apa_yang_paling_anda_nikmati_ketika_berpergian">Apa yang paling Anda nikmati\nketika berpergian?</string>
    <string name="pilih_minat_anda">Pilih beberapa minat Anda</string>
    <string name="opt_cagar_alam">Cagar Alam</string>
    <string name="day_count">Hari ke-%1$d</string>
</resources>