<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDestinationImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivDestinationImage"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvItineraryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_itinerary"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItineraryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_itinerary"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>